--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,15 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+iron_exec = { path = "../iron-exec" }
 tonic = "0.10.2"
 prost = "0.12.3"
 tokio = { version = "1", features = ["full"] }
+uuid = { version = "1.6.1", features = ["v4"] }
+crossbeam = "0.8.2"
+threadpool = "1.8.1"
+futures = "0.3.30"
+async-stream = "0.3.5"
 
 [build-dependencies]
 tonic-build = "0.10.2"
